deployment/f002/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v2
  labels:
    app: helloworld
    version: F002
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
      version: F002
  template:
    metadata:
      labels:
        app: helloworld
        version: F002
    spec:
      containers:
      - name: helloworld
        image: jokercd/helloworld:v2
        ports:
        - containerPort: 6000
        imagePullPolicy: Always
