deployment/f002/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-f002
spec:
  host: helloworld
  subsets:
  - name: F002
    labels:
      version: F002
